# yekar_voice

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  config.example.toml  config.local.toml  install-user-service.sh  run-daemon.sh  voice-dictation.service
src/: main.rs  multilingual.rs
